# LucioEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat
asset/shader/: primitive.fs  primitive.vs  primitiveTexture.fs  primitiveTexture.vs
sandbox/: CMakeLists.txt  main.cpp
sandbox/asset/shader/: primitive.vs  primitiveTexture.fs  primitiveTexture.vs
source/: lucio.hpp
source/engine/: common.hpp
source/engine/application/: app.cpp  app.hpp  window.cpp  window.hpp
source/engine/graphics/: mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex.hpp
source/engine/input/: callback.hpp  event.cpp  event.hpp
source/engine/util/: fileReader.cpp  fileReader.hpp
source/lucio/: common.hpp
source/lucio/core/: app.cpp  app.hpp  callback.hpp  event.cpp  event.hpp  window.cpp  window.hpp
source/lucio/render/: mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex.hpp
source/lucio/util/: FileManager.cpp  FileManager.hpp  IFileManager.hpp  fileReader.cpp  fileReader.hpp  filereader.hpp
submodules/: CMakeLists.txt
